--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter_bloc: ^8.1.6
   flutter_svg: ^2.0.10+1
   font_awesome_flutter: ^10.7.0
+  get_it: ^7.7.0
   go_router: ^14.2.3
   google_fonts: ^6.2.1
 
